--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=tasks
+
+#Database
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tasks
+spring.datasource.username=root
+spring.datasource.password=rootpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Hikari connection pool settings (optional, adjust as needed)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+
+# spring.jpa.show-sql=false
+# spring.jpa.properties.hibernate.format_sql=true
+
+server.servlet.context-path=/api
